--- a/build
+++ b/build
@@ -3,7 +3,7 @@ pipeline {
     docker { image 'node:16-alpine' }
   }
   stages {
-    stage('Tests') {
+    stage('Testss') {
       steps {
         sh 'node --version'
       }
