--- a/build
+++ b/build
@@ -3,9 +3,9 @@ pipeline {
     docker { image 'node:16-alpine' }
   }
   stages {
-    stage('Testss') {
+    ('Testss') {
       steps {
-         'node --version'
+       sh 'node --version'
       }
     }
   }
